force-app/main/default/objects/Compensation_Increase_Request__c/Compensation_Increase_Request__c.object-meta.xml
<CustomObject>
    <label>Compensation Increase</label>
    <nameField>
        <displayFormat>CIR-{00000}</displayFormat>
        <label>Compensation Increase Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compensation Increases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>