force-app/main/default/objects/Compensation_Increase_Request__c/fields/Bonus_Type__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Type__c</fullName>
    <label>Bonus Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Bonus</fullName>
            </value>
            <value>
                <fullName>Sales Bonus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>