force-app/main/default/objects/Compensation_Increase_Request__c/fields/Date_of_Last_Performance_Review__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Performance_Review__c</fullName>
    <label>Date of Last Performance Review</label>
    <type>Date</type>
</CustomField>