force-app/main/default/objects/Compensation_Increase_Request__c/fields/Detailed_Reason_for_Increase__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Reason_for_Increase__c</fullName>
    <label>Detailed Reason for Increase</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>