force-app/main/default/objects/Compensation_Increase_Request__c/fields/Employee_Remunerations_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Employee_Remunerations_Payment_Type__c</fullName>
    <label>Remuneration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Exempt</fullName>
            </value>
            <value>
                <fullName>Hourly O/T</fullName>
            </value>
            <value>
                <fullName>Entitlement</fullName>
            </value>
            <value>
                <fullName>Exempt / Salary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>