force-app/main/default/objects/Compensation_Increase_Request__c/fields/HR_Hub__c.field-meta.xml
<CustomField>
    <fullName>HR_Hub__c</fullName>
    <label>HR Hub</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NAM</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>APAC - A</fullName>
            </value>
            <value>
                <fullName>APAC - B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>