force-app/main/default/objects/Compensation_Increase_Request__c/fields/of_Bonus_Increase__c.field-meta.xml
<CustomField>
    <fullName>of_Bonus_Increase__c</fullName>
    <formula>(Proposed_Bonus_Amount__c - Bonus_Amount__c ) / Bonus_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% of Bonus Increase</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>