force-app/main/default/objects/Compensation_Increase_Request__c/fields/of_Commission_Increase__c.field-meta.xml
<CustomField>
    <fullName>of_Commission_Increase__c</fullName>
    <formula>(Proposed_Commission_Amount__c - Commission_Amount__c) / Commission_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% of Commission Increase</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>