force-app/main/default/objects/Compensation_Increase_Request__c/fields/of_Last_Increase__c.field-meta.xml
<CustomField>
    <fullName>of_Last_Increase__c</fullName>
    <label>% of Last Increase</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>