force-app/main/default/objects/Compensation_Increase_Request__c/fields/Proposed_Base_Salary__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Base_Salary__c</fullName>
    <label>Proposed Base Salary</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>