force-app/main/default/objects/Compensation_Increase_Request__c/fields/Proposed_Bonus_Amount__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Bonus_Amount__c</fullName>
    <label>Proposed Bonus Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>