force-app/main/default/objects/Compensation_Increase_Request__c/fields/Proposed_Department__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Department__c</fullName>
    <label>Proposed Department</label>
    <length>200</length>
    <type>Text</type>
</CustomField>