force-app/main/default/objects/Compensation_Increase_Request__c/fields/Proposed_Total_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Total_Compensation__c</fullName>
    <formula>Proposed_Base_Salary__c +  Proposed_Bonus_Amount__c +  Proposed_Commission_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposed Total Compensation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>