force-app/main/default/objects/Compensation_Increase_Request__c/fields/Provide_Updated_Job_Description__c.field-meta.xml
<CustomField>
    <fullName>Provide_Updated_Job_Description__c</fullName>
    <inlineHelpText>Please provide an updated job description that outlines increased responsibilities.</inlineHelpText>
    <label>Provide Updated Job Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>