force-app/main/default/objects/Compensation_Increase_Request__c/fields/RVP__c.field-meta.xml
<CustomField>
    <fullName>RVP__c</fullName>
    <formula>Employee_Name__r.RVP__r.FirstName + &quot; &quot; + Employee_Name__r.RVP__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If this field is blank or has the incorrect manager, please send an email to salesforcecrmsupport@pgi.com to have the user&#39;s record updated.</inlineHelpText>
    <label>RVP</label>
    <type>Text</type>
</CustomField>