force-app/main/default/objects/Compensation_Increase_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Awaiting Mike Havener Approval</fullName>
            </value>
            <value>
                <fullName>Awaiting Manager Approval</fullName>
            </value>
            <value>
                <fullName>Awaiting GFL or EVP Approval</fullName>
            </value>
            <value>
                <fullName>Awaiting Regional HR HUB Approval</fullName>
            </value>
            <value>
                <fullName>Awaiting Director of Global FP&amp;A Approval</fullName>
            </value>
            <value>
                <fullName>Awaiting CHRO Approval</fullName>
            </value>
            <value>
                <fullName>Awaiting CFO Approval</fullName>
            </value>
            <value>
                <fullName>Awaiting CEO Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>