force-app/main/default/objects/Compensation_Increase_Request__c/fields/SVP__c.field-meta.xml
<CustomField>
    <fullName>SVP__c</fullName>
    <formula>Employee_Name__r.SVP__r.FirstName + &quot; &quot; + Employee_Name__r.SVP__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If this field is blank or has the incorrect manager, please send an email to salesforcecrmsupport@pgi.com to have the user&apos;s record updated.</inlineHelpText>
    <label>SVP</label>
    <type>Text</type>
</CustomField>