force-app/main/default/objects/Compensation_Increase_Request__c/validationRules/Approving_Managers_Reviewed.validationRule-meta.xml
<ValidationRule>
    <fullName>Approving_Managers_Reviewed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISCHANGED(Status__c),
 Approving_Managers_Reviewed__c = FALSE
)</errorConditionFormula>
    <errorDisplayField>Approving_Managers_Reviewed__c</errorDisplayField>
    <errorMessage>You must be sure that the above managers are correct, and check this box prior to submitting a Compensation Increase Request for approval.</errorMessage>
</ValidationRule>