force-app/main/default/objects/Compensation_Increase_Request__c/listViews/PGi_CIR_HR_APAC_B_Compensation_Increase_Request.listView-meta.xml
<ListView>
    <fullName>PGi_CIR_HR_APAC_B_Compensation_Increase_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>PGi-CIR-HR-APAC B</label>
    <queue>PGi_CIR_HR_APAC_B</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>